.kubernetes/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastify-sample
  labels:
    app: fastify-sample
spec:
  replicas: 5
  selector:
    matchLabels:
      app: fastify-sample
  template:
    metadata:
      labels:
        app: fastify-sample
    spec:
      containers:
        - name: fastify
          image: ghcr.io/julian-louis/fastify-sample:main
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000
